--- a/money_control_app/package.json
+++ b/money_control_app/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/lab": "^6.0.0-beta.30",
     "@mui/material": "^6.4.7",
+    "@mui/styled-engine-sc": "^6.4.6",
+    "@mui/x-charts": "^7.28.0",
     "@mui/x-date-pickers": "^7.27.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -20,6 +22,7 @@
     "react-native-month-year-picker": "^1.9.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
